# MRMS_FN

./: .env.bak3  .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflow/: deploy.yml
docs/: README.md  architecture.md  cloudflare-tunnel-setup.md  contents_constructure.md  cron-setup.md  deployment.md  lambda-labs-setup.md  pipeline.md  setup.md  tidal-sdk-notes.md
docs/decisions/: ADR-001-youtube-newuser-automation.md  ADR-002-pgt-library-mrt-curation.md  ADR-003-mrt-reactions.md  ADR-004-tidal-spectrum-equalizer.md  ADR-005-search-emp-expansion.md  ADR-006-wellness-recommendation.md  ADR-007-situation-llm-recommendation.md  ADR-008-taste-first-embedding-recsys.md  (+4 more)
prisma/: schema.prisma
scripts/: 00_test_spotify.py  01_enrich_via_deezer.py  02_download_audio.py  02b_retry_failed.py  03_extract_embeddings.py  03a_predecode.py  04_train_heads.py  05_inference.py  06_build_faiss.py  07_load_to_db.py  08_onboard_tidal.py  08c_tidal_device_code.py  09_generate_mrt.py  09_view_mrt.py  10_load_emp_embeddings.py  11_backfill_emp_covers.py  13_embed_youtube_misses.py  14_enrich_emp_isrc.py  16_normalize_emp_ids.py  backfill_isrcs.py  backfill_playlist_usertracks.py  backup.sh  catalog_dump_helper.sh  deploy.sh  fetch_visuals.py  import_emp.py  run_emp_pipeline.py
tests/: conftest.py  test_config.py  test_config_situation.py  test_tidal_playlist.py
web/: .env.local.example  .gitignore  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
(+445 files in other folders)
