[project]
name = "mrms"
version = "0.1.0"
description = "Music Recommendation Management System — self-trained audio analysis + personalized playlist generation"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "lightning>=2.2",
    "tensorboard>=2.16",

    # Audio processing
    "librosa>=0.10",
    "soundfile>=0.12",
    "pydub>=0.25",

    # Vector search & DB
    "faiss-cpu>=1.8",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "sqlalchemy>=2.0",

    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "scikit-learn>=1.4",

    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # API clients
    "httpx>=0.27",
    "tenacity>=8.2",

    # Utilities
    "python-dotenv>=1.0",
    "rich>=13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrms"]
